margin agregado a la barra de abajo
kdlskdsldk

--- a/styles.css
+++ b/styles.css
@@ -594,6 +594,7 @@
 										.main-container-section-third{
 											flex-direction: row-reverse;
 											width: 60%;
+											margin-left:80px;
 											order: 3;
 										}
 
